--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
-"aa" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<title>Predragović furniture</title>
+	<meta name="keywords" content="sofa, furniture">
+	<meta name="author" content="Aleksa Predragović">
+	<meta name="description" content="Predragović furniture">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body data-spy="scroll" data-target="#my-navbar" data-offset="50">
+	
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container">
+			<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+		  
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+				  <a class="nav-link" href="index.html">About</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="gallery.html">Gallery</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact</a>
+				</li>
+			  </ul>	
+			  <form class="form-inline my-2 my-lg-0">
+				<input class="form-control" type="search" placeholder="Search" aria-label="Search">
+			  </form>
+			</div>
+		</div>
+		
+	  </nav>
+
+	<div class="jumbotron">
+		<div class="container text-center">
+			<h1>Predragović furniture</h1>
+			<div id="square">
+				<p>
+					Furniture Factory Predragović was founded in 1990 in Belgrade as a factory for the production of upholstered
+					furniture. The intensive economic, technological and investment development of the company began in 1994 with the
+					construction of a modern factory for the production of upholstered furniture with state-of-the-art equipment and
+					technology.</p>
+			</div>
+			<a class="btn btn-default btn-lg " href="#" role="button">Read whole story</a>
+		</div>
+	</div>
+
+	<div class="container">
+		<section>
+			<div class="page-header" id="about">
+				<h2>About Me. <small>More about owner</small></h2>
+			</div>
+			<div class="row align-items-center">
+				<div class="col-md-5 col-sm-4 col-xs-12">
+					<img src="images/me.jpg" class="img-fluid img-circle" alt="Aleksa Predragović">
+				</div>
+				<div class="col-md-7 col-sm-8 col-xs-12 aboutMe">
+					<p class="text-md-right">
+						My name is Aleksa Predragović. I was born in Belgrade on March 14, 1998, where I graduated from Electro-technical highschool "Nikola Tesla",
+						in the direction of Telecomunications.</p>
+					<p class="text-md-right">
+						After that, I enrolled in the Collage of Vocational Studies for Information and Communication Technologies,
+						the direction of Internet technology. I came here because I always wanted to deal with computers and I think that
+						I can learn everything I need for further work here.</p>
+				</div>
+			</div>
+		</section>
+	</div>
+	<section>
+		<div class="well">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-lg-6 col-sm-9 col-xs-12">
+						<form action="#" method="GET" class="form-container">
+							<div class="form-group">
+								<h1>Login Form</h1>
+							</div>
+							<div class="form-group">
+								<label for="exampleInputEmail1">Email address</label>
+								<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+							</div>
+							<div class="form-group">
+								<label for="exampleInputPassword1">Password</label>
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+							</div>
+							<div class="checkbox">
+								<input type="checkbox"><label>Remember me</label>
+							</div>
+							<button type="submit" class="btn btn-success">Submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
+		<div class="well">
+			<div class="container text-center">
+				<h3>Which are your favorite products?</h3>
+				<label class="radio-inline">
+					<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Tables
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Chairs
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> Sofas
+				</label>
+				<label class="radio-inline">
+					<input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4"> Beds
+				</label>
+			</div>
+		</div>
+		<div class="container text-center">
+			<ul class="list-inline">
+				<li>
+					<a class="btn btn-social-icon btn-twitter"></a>
+					<a href="http://www.twitter.com">
+						<span class="fa fa-twitter"></span>
+					</a>
+
+				</li>
+
+				<li>
+					<a class="btn btn-social-icon btn-facebook"></a>
+					<a href="http://www.facebook.com">
+						<span class="fa fa-facebook"></span>
+					</a>
+
+				</li>
+
+				<li>
+					<a class="btn btn-social-icon btn-youtube"></a>
+					<a href="http://www.youtube.com">
+						<span class="fa fa-youtube"></span>
+					</a>
+
+				</li>
+
+				<br />
+
+				<span id="mapa">
+					<a href="rss.xml" id="rss"><img src="images/rss_ico.png" alt="rss" title="RSS"></a>
+					<a href="sitemap.xml" id="map"><img src="images/sitemap_ico.png" alt="Sitemap" title="Sitemap" /></a>
+					<a href="robots.txt" id="robots"><img src="images/robots_ico.png" alt="Robots" title="Robots" /></a>
+				</span>
+			</ul>
+			<p class="footerP">&copy;Copyright &#64; <a href="#about">Aleksa Predragović</a> 2021</p>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
+</html>
