--- a/contact.html
+++ b/contact.html
@@ -230,12 +230,12 @@
 				<br />
 
 				<span id="mapa">
-					<a href="rss.xml" id="rss"><img src="images/rss_ico.png" alt="rss" title="RSS"></a>
+					<a href="https://rss.app/feeds/qXpbBmH4oUJnuXuP.xml" id="rss"><img src="images/rss_ico.png" alt="rss" title="RSS"></a>
 					<a href="sitemap.xml" id="map"><img src="images/sitemap_ico.png" alt="Sitemap" title="Sitemap" /></a>
 					<a href="robots.txt" id="robots"><img src="images/robots_ico.png" alt="Robots" title="Robots" /></a>
 				</span>
 			</ul>
-			<p class="footerP">&copy;Copyright &#64; <a href="#about">Aleksa Predragović</a> 2021</p>
+			<p class="footerP">&copy;Copyright &#64; <a href="index.html">Aleksa Predragović</a> 2021</p>
 		</div>
 	</footer>
 
